--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+zero-installer-kids (0.2) focal; urgency=medium
+
+  * Add class-jam
+
+ -- M.Angel Juan <m.angel.juan@gmail.com>  Thu, 16 Jun 2022 15:56:40 +0200
+
 zero-installer-kids (0.1) focal; urgency=medium
 
   * Initial Release.
