--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+zero-installer-kids (0.2.1) lliurex22; urgency=medium
+
+  * Fix permissions
+
+ -- M.Angel Juan <m.angel.juan@gmail.com>  Thu, 16 Jun 2022 16:10:13 +0200
+
 zero-installer-kids (0.2) focal; urgency=medium
 
   * Add class-jam
