--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+zero-installer-kids (0.2.2) lliurex22; urgency=medium
+
+  * Add pysiogame
+
+ -- M.Angel Juan <m.angel.juan@gmail.com>  Tue, 21 Jun 2022 10:43:33 +0200
+
 zero-installer-kids (0.2.1) lliurex22; urgency=medium
 
   * Fix permissions
