--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+zero-installer-kids (0.12.2) jammy; urgency=medium
+
+  * Initial release for Jammy
+
+ -- Juan Ramon Pelegrina <juapesai@hotmail.com>  Fri, 01 Sep 2023 11:28:45 +0200
+
 zero-installer-kids (0.2.2) lliurex22; urgency=medium
 
   * Add pysiogame
