--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+zero-installer-kids (0.22.3) noble; urgency=medium
+
+  * Hide installation from Zero-Center.
+
+ -- Daniel Duran <daduve@gmail.com>  Fri, 02 May 2025 10:35:36 +0200
+
 zero-installer-kids (0.22.2) noble; urgency=medium
 
   * Initial release for Noble
