--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+zero-installer-kids (0.22.4) noble; urgency=medium
+
+  * Added support to launch zmd with pkg name as argument
+  
+ -- Juan Ramon Pelegrina <juapesai@hotmail.com>  Wed, 14 May 2025 12:54:53 +0200
+
 zero-installer-kids (0.22.3) noble; urgency=medium
 
   * Hide installation from Zero-Center.
