--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+zero-installer-kids (0.12.3) jammy; urgency=medium
+
+  * Added support to launch zmd with pkg name as param
+  
+ -- Juan Ramon Pelegrina <juapesai@hotmail.com>  Wed, 14 May 2025 15:21:38 +0200
+
 zero-installer-kids (0.12.2) jammy; urgency=medium
 
   * Initial release for Jammy
